--- a/css/MyStyles.css
+++ b/css/MyStyles.css
@@ -48,3 +48,31 @@
 .blue {
     color: deepskyblue;
 }
+
+.container-project {
+    background-color: #FBFBFB;
+    margin: 5px;
+    max-width: 300px;
+    color: black;
+    box-shadow: 0 0.05em 0.15em 0 rgba(0, 0, 0, 0.05);
+}
+
+.container-project img {
+    width: 300px;
+    height: 175px;
+    object-fit: cover;
+}
+
+.container-project video {
+    width: 300px;
+    height: 175px;
+    object-fit: fill;
+}
+
+.title-project {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    padding: 5px;
+}
