--- a/projects.css
+++ b/projects.css
@@ -1,3 +1,31 @@
 h2 {
 	text-align: center;
 }
+.container-project {
+    background-color: #FBFBFB;
+    margin: 5px;
+    max-width: 300px;
+    color: black;
+    box-shadow: 0 0.05em 0.15em 0 rgba(0, 0, 0, 0.05);
+}
+
+.container-project img {
+    width: 300px;
+    height: 175px;
+    object-fit: cover;
+}
+
+.container-project video {
+    width: 300px;
+    height: 175px;
+    object-fit: fill;
+    margin-top: 20%;
+}
+
+.title-project {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    padding: 5px;
+}
