--- a/projects.css
+++ b/projects.css
@@ -7,6 +7,7 @@ h2 {
     max-width: 300px;
     color: black;
     box-shadow: 0 0.05em 0.15em 0 rgba(0, 0, 0, 0.05);
+
 }
 
 .container-project img {
@@ -19,7 +20,7 @@ h2 {
     width: 300px;
     height: 175px;
     object-fit: fill;
-    margin-top: 20%;
+    align-items: center;
 }
 
 .title-project {
