added the picture

--- a/assets/css/todo.css
+++ b/assets/css/todo.css
@@ -1,6 +1,6 @@
 body {
 	font-family: Roboto;
-  	background-image: url("http://michaelboyd.me/assets/Optimized-sunrise.jpg");
+  	background-image: url("http://michaelboyd.me/assets/web-sunrise.jpg");
  }
 ul {
 	list-style: none;
