--- a/projects.css
+++ b/projects.css
@@ -30,3 +30,12 @@ h2 {
     font-size: 20px;
     padding: 5px;
 }
+
+.project{
+    text-align: center;
+    margin: 0 auto;
+}
+
+.link{
+    cursor: pointer;
+}
