--- a/assets/css/todo.css
+++ b/assets/css/todo.css
@@ -4,7 +4,7 @@ body {
   	background-size: cover;
   	background-size: 100%;
  }
-ul {
+ ul {
 	list-style: none;
 	margin: 0;
 	padding: 0;
@@ -29,14 +29,14 @@ h1 {
 
 
 
-li {
+.container li {
 	background: #fff;
 	height: 40px;
 	line-height: 40px;
 	color: #666;
 }
 
-li:nth-child(2n){
+.container li:nth-child(2n){
 	background: #f7f7f7;
 }
 
@@ -83,4 +83,8 @@ input:focus{
 .completed {
 	color: gray;
 	text-decoration: line-through;
+}
+
+.todoMenu li {
+	color: #fff;
 }
