--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,7 @@
     height: 250px;
     text-align: center;
     width: 100%;
-       
+
 }
 
 .headline {
@@ -25,14 +25,19 @@
 #about-profile{
     float: left;
     margin: 15px;
-    border: 3px; 
+    border: 3px;
     border-style: solid;
     margin-top: 0px;
 }
+
+#immersive{
+  text-align:center;
+  background-image: url('assets/media/ar.jpg');
+}
 .about-me {
     font-size: 15px;
-    vertical-align: middle; 
-    
+    vertical-align: middle;
+
 }
 
 .resume {
@@ -42,7 +47,7 @@
 .fix{
     position: fixed;
     background-color: steelblue;
-    
+
 }
 
 .blue {
@@ -94,4 +99,3 @@ h2 {
 .site-heading {
     margin-top: 150px;
 }
-
