--- a/assets/css/todo.css
+++ b/assets/css/todo.css
@@ -1,6 +1,6 @@
 body {
 	font-family: Roboto;
-  	background-image: url("http://michaelboyd.me/assets/web-sunrise.jpg");
+  	background-image: url("http://michaelboyd.me/assets/media/web-sunrise.jpg");
   	background-size: cover;
   	background-size: 100%;
  }
